# deepvariant-linux-arm64

./: .bumpversion.toml  .dockerignore  .gitignore  AGENTS.md  AGENT_LEARNINGS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.arm64  Dockerfile.arm64.runtime  Makefile  README.md  SECURITY.md  codemeta.json  pyproject.toml  run-prereq.sh
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-v1.9.0-arm64.2.md  release-notes-v1.9.0-arm64.4.md
.github/workflows/: arm64-build.yml  build-happy-arm64.yml  bump-version.yml  ci.yml  codeql.yaml
deepvariant/: BUILD  call_variants.py  convert_to_saved_model.py  image_row.cc  image_row.h  keras_modeling.py  make_examples_core.py  make_examples_native.cc  make_examples_native.h  pileup_channel_lib.cc  pileup_channel_lib.h  pileup_channel_lib_test.cc  pileup_image_native.cc  pileup_image_native.h  pileup_image_native_test.cc  testing_utils.cc  train.py
deepvariant/channels/: allele_frequency_channel.cc  allele_frequency_channel.h  avg_base_quality_channel.cc  avg_base_quality_channel.h  base_6ma_channel.cc  base_6ma_channel.h  (+32 more)
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.arm64.builder  Dockerfile.arm64.runtime  Dockerfile.deepsomatic  Dockerfile.deeptrio  Dockerfile.happy-arm64  Dockerfile.pangenome_aware_deepvariant
docs/: TRAINING_EXPERIMENT.md  TRAINING_RESUME.md  agent-findings.md  architecture-arm64.md  benchmark-summary.md  deepvariant-build-test.md  efficientnet-b3-backbone.md  onednn-ampereone.md  oracle-a1-benchmark.md  oracle-a2-sigill.md  oracle-a2-wheel-test.md  protobuf-serialization-notes.md
paper/: paper.bib  paper.md
scripts/: autoconfig.sh  benchmark_arm64.sh  benchmark_fast_pipeline.sh  benchmark_full_chr20.sh  benchmark_graviton3.sh  benchmark_int8_onnx.py  benchmark_jemalloc_ablation.sh  benchmark_parallel_cv.sh  benchmark_small.sh  build_proto.py  convert_model_onnx.py  create_golden.sh  create_golden_deeptrio.sh  docker_entrypoint.sh  download_training_data.sh  export_efficientnet_b3.py  generate_benchmark_charts.py  inference_deepsomatic.sh  inference_deeptrio.sh  inference_deepvariant.sh  profile_make_examples.sh  quantize_model_onnx.py  quantize_static_onnx.py  request_aws_quota.sh  run_deepvariant.py  run_parallel_cv.sh  setup_graviton.sh  setup_training_env.sh  synthetic_calibration.py  train_efficientnet_b3.sh  validate_accuracy.sh  validate_stratified.sh
tools/: build_absl.sh
(+14 files in other folders)
